tests/invalid/closure/closure_as_fn_annotation.facet
fn main() -> unrestricted isize {
    let y: unrestricted isize = 7 in
    let f: unrestricted fn(unrestricted isize) -> unrestricted isize = closure [y](x: unrestricted isize) -> unrestricted isize { y } in
    (f 1)
}
